--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <!--couresel start-->
 
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="false">
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 
         <!-- Indicators -->
 
