--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <title>Medic Website</title>
-    <link rel="shortcut icon" type="image/x-icon" href="./PKLogo.PNG"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/PKLogo.PNG"/>
     <!-- Bootstrap -->
 
     <link href="css/bootstrap.css" rel="stylesheet">
